<resources>
    <string name="app_name"> Fagiolo Timer</string>
    <string name="start_button"> Start </string>
    <string name="pause_button"> Pause </string>
    <string name="reset_button"> Reset </string>
    <string name="be_productive"> Be Productive. </string>
    <string name="pausa_text"> Relax </string>
    <string name="pausa_activity"> Pause </string>
    <string name="inizia_pausa"> Time for a break </string>
    <string name="settings"> Settings </string>
    <string name="set_timer"> Set your timer </string>
    <string name="set_your_pause"> Set your break timer </string>
    <string name="apply_changes"> Apply Changes </string>
    <string name="separator"> : </string>
    <string name="status_main"> Time to get back to work </string>
    <string name="status_pause"> Time for a break </string>

</resources>
