<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_fag"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/prog_circ"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="200dp"
        android:minHeight="200dp"
        android:progressDrawable="@drawable/circular"
        android:indeterminate="false"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/start_button"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/start_button"
                android:onClick="startTimer"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/start_button_dark"
                tools:layout_editor_absoluteY="185dp" />

            <ImageView
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/reset_button"
                android:onClick="resetTimer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_button"
                app:srcCompat="@drawable/reset_button_dark"
                tools:layout_editor_absoluteY="185dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/be_productive"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pausa_inizia"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/Background"
                android:gravity="center_vertical"
                android:onClick="iniziaPausa"
                android:text="@string/inizia_pausa"
                android:textAlignment="center"
                android:textColor="@color/blue_fag"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/alarm_off"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="alarmOff"
                app:srcCompat="@drawable/alarmoff_dark" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>